--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0"
+anyhow = "1.0.31"
+crc = "1.8.1"
+clap = "2.33.1"
+structop = "0.1.0"
+structop-derive = "0.1.0"
 
