--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 anyhow = "1.0.31"
 crc = "1.8.1"
 clap = "2.33.1"
-structop = "0.3.15"
+structopt = "0.3.15"
 structopt-derive = "0.4.8"
 
